--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
 /* header and nav links */
 header {
     padding: 15px 25px;
-    background-color: rgb(174, 174, 255);
+    background-color: rgb(126, 255, 154);
     background-image: url();
     display: flex;
     justify-content: ;
@@ -19,7 +19,7 @@ header {
 }
 
 header h1 {
-    color: rgb(255, 0, 0);
+    color: orangered;
     padding; 0 25px;
     
 
@@ -27,4 +27,5 @@ header h1 {
 
 header nav ul a {
     margin: 0 30px;
+    color: red
 }
