--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 /* rules for (almost) entire body */
 
 * {
@@ -8,24 +7,27 @@
 }
 
 body {
-    background-color: antiquewhite;
-    color: black;
-    margin: 0;
+    background-color: #000000;
+    color: white;
 }
 
 /* header and nav links */
 header {
-    padding: 15px 25px;
     background-color: #bce8f7;
-    background-image: url("../images/");
+    width: auto;
     display: flex;
+    flex-wrap: wrap; 
     justify-content: space-between;
-    flex-wrap: wrap;
+    align-items: center;
+}
+
+header,
+footer {
+    padding: 15px 55px;
 }
 
 header h1 {
     color: orchid;
-    margin: 0 30px;
 }
 
 header nav ul {
@@ -35,8 +37,12 @@ header nav ul {
     justify-content: space-between;
 }
 
+header ul li {
+    padding: 0 60px;
+}
+
 header nav ul li a {
-    margin: 0 30px;
+
     color: orchid;
     text-decoration: none;
     
@@ -45,25 +51,31 @@ header nav ul li a {
 /* hero and blurb */
 
 .hero {
-    background-color: rgb(177, 255, 146);
+    background-color: #b2ff94;
     background-image: url("../images/catskullanimation.gif");
     background-size: cover; 
     height: 600px; 
     background-position: center;
     background-repeat: no-repeat;
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
-    align-content: center;
+    align-content: flex-end;
+    justify-content: flex-end;
+    padding: 25px 120px;
+}
+
+.hero h2 {
+    /* margin: 0 25px 120px 0; */
+    font-family: 'Sail', cursive;
+    font-size: 25px;
+    display: inline-block;
 }
 
 footer {
     background-color: #bce8f7;
-    padding: 15px 25px;
     width: auto;
-    justify-content: space-between;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap; 
     justify-content: space-between;
 }
 
@@ -85,6 +97,7 @@ footer ul li {
 }
 
 footer ul li a {
-    color: orchid;
+    color: #da70d6;
     text-decoration: none; 
+    
 }
