--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ header nav li a:hover:before {
 header {
     background-color: #000000;
     width: auto;
-    position: -webkit-sticky; /* Safari */
+    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 9999;
