--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,36 @@
     box-sizing: border-box;
 }
 
+/* scroll bar styles  */
+html {  
+    overflow: -moz-scrollbars-none;
+    scrollbar-width: none;
+}
+
+::-webkit-scrollbar {
+width: 0;
+background: transparent;
+}
+
+#progressBarContainer {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 10px;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.05);
+}
+
+#progressBar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 10px;
+    background-image: linear-gradient(0deg, hsl(297,86%,59%),hsl(342,86%,59%),hsl(27,86%,59%),hsl(72,86%,59%),hsl(117,86%,59%),hsl(162,86%,59%),hsl(207,86%,59%),hsl(252,86%,59%));    height: 100%;
+    height: 0;
+    opacity: 0;
+  }
+
 body {
     background-color: #000000;
     color: white;
@@ -17,6 +47,7 @@ body {
     font-family: 'UnifrakturMaguntia', 'Times New Roman', Times, serif;
     font-weight: lighter;
     font-size: 30px;
+    letter-spacing: 0.02rem;
 }
 
 .wrapper {
@@ -131,7 +162,7 @@ footer ul li a {
 .hero {
     background-color: #000000;
     background-image: url("../images/catblackandwhite.gif");
-    background-size: cover; 
+    background-size: auto; 
     height: 600px; 
     background-position: center;
     background-repeat: no-repeat;
@@ -334,6 +365,18 @@ footer ul li a {
         opacity: 1;
     }
 
+/* scroll bar styles  */
+#progressBarContainer {
+    width: 0px;
+    background: #000000;
+}
+
+#progressBar {
+    width: 0px;
+    opacity: 1;
+    background-color: #000000;
+  }
+
 }
 
 /* small phones and smaller phones */
@@ -440,6 +483,6 @@ footer ul li a {
 
 @media screen and (max-width: 400px) {
     .about-img-p span {
-        color: #ff66a6;
+        color: linear-gradient(0deg, hsl(297,86%,59%),hsl(342,86%,59%),hsl(27,86%,59%),hsl(72,86%,59%),hsl(117,86%,59%),hsl(162,86%,59%),hsl(207,86%,59%),hsl(252,86%,59%));;
     }
 }
