--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -439,12 +439,12 @@ footer ul li a {
     }
 
     .hero {
-         height: 250px;
+         height: 700px;
     }
 
     .hero h2 {
-        font-size: 15px;
-        margin-bottom: 25px;
+        font-size: 25px;
+        margin-bottom: 125px;
     }
 
     .about-img-p {
@@ -486,11 +486,14 @@ footer ul li a {
     }
 
     .work-thumb figcaption {
-        bottom: 50%;
         right: 10px;
         padding: 2px;
         font-size: 12px;
     }
+}
+
+.work-thumb:first-child figcaption {
+    bottom: 25%;
 }
 
 @media screen and (max-width: 400px) {
