--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -365,7 +365,7 @@ footer ul li a {
         opacity: 1;
     }
 
-/* scroll bar styles  */
+/* scroll bar style  */
 #progressBarContainer {
     width: 0px;
     background: #000000;
