--- a/src/index.css
+++ b/src/index.css
@@ -67,8 +67,16 @@ header nav ul li a {
 footer {
   display: flex;
   flex-wrap: wrap; 
-  justify-content: space-between;
+  justify-content: center;
   align-items: flex-end;
+  background-color: #000000;
+  background-image: url('./assets/images/smileybanner.png');
+  width: 100%;
+  height: auto;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 2em;
 }
 
 footer ul {
