--- a/src/index.css
+++ b/src/index.css
@@ -160,7 +160,7 @@ footer ul li a span:hover {
 .resume {
   display: flex;
   justify-content: center;
-  width: 50vw;
+  width: 60vw;
   margin-top: 2em;
 }
 
@@ -207,10 +207,10 @@ h3 {
   font-size: 1.45em;
 }
 
-.project-tiles {
+/* .project-tiles {
   position: relative;
   width: 60%;
-}
+} */
 
 /* .project-tiles figure{
   opacity: 0;
@@ -231,17 +231,29 @@ h3 {
   width: 300px;
 }
 
+figure {
+  border-radius: 5px;
+  position: relative;
+  overflow: hidden;
+  font-size: 0;
+}
+
 .project-tiles figcaption {
   position: absolute;
   z-index: 3;
   opacity: 0;
-  color: rgba(255, 0, 242, 0.5);
-  font-size: 4em;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: rgb(255, 255, 255, 0.75);
+  font-size: 4rem;
   font-weight: lighter;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   transition: opacity 0.55s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .project-tiles:hover figcaption {
