--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,12 @@ body {
   border-radius: 5px;
 }
 
+h3 {
+  font-size: 1.45em;
+  font-family: 'UnifrakturMaguntia', 'Times New Roman', Times, serif;
+  font-weight: lighter;
+}
+
 /* header and footer styling */
 
 h1 {
@@ -71,7 +77,6 @@ header nav ul {
 
 header ul li {
   padding: 0 3em;
-
 }
 
 header ul li:hover,
@@ -205,10 +210,6 @@ footer ul li a span:hover {
   width: 45%;
 }
 
-h3 {
-  font-size: 1.45em;
-}
-
 .project-tile-wrapper {
   display: flex;
   margin-bottom: 3em;
@@ -250,7 +251,7 @@ figure {
 .project-text {
   margin-left: 1em;
   line-height: 1.25;
-
+  max-width: 70%;
 }
 
 .project-text p {
@@ -286,28 +287,51 @@ figure {
   flex-direction: column;
 }
 
-.contact-number {
+.contact-div {
+  width: 100%;
   margin: 3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.contact-number p {
+.social-media {
+  margin-bottom: 1em;
+}
+
+.social-media ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+}
+
+.social-media ul li {
+  padding: 0 1em;
+}
+
+.contact-div p {
   display: flex;
   flex-direction: column;
 }
 
-.contact-number a {
+.contact-div a {
   color: #fff;
   text-decoration: none;
 }
 
-.contact-number a:hover,
+.contact-div a:hover,
 footer a:hover {
   color: #ff00b3;
 }
 
-.contact-number i {
+.contact-div i {
   font-size: 3em;
   margin-top: 10px;
+}
+
+i.social-i {
+  font-size: 30px;
 }
 
 .resume-details {
@@ -317,11 +341,10 @@ footer a:hover {
   flex-direction: column;
 }
 
-.resume-details div h3 {
-  font-family: 'UnifrakturMaguntia', 'Times New Roman', Times, serif;
+.resume-details h3,
+.resume-side h3 {
   letter-spacing: 0.18rem;
   margin: 5px 0;
-  font-weight: lighter;
 }
 
 .skills-wrapper {
@@ -332,6 +355,7 @@ footer a:hover {
 
 .skills-section {
   width: 100%;
+  font-size: 15px;
 }
 
 .skill-list {
@@ -349,20 +373,39 @@ footer a:hover {
   justify-content: center;
   flex-direction: column;
   margin-top: 1em;
+  align-items: center;
 }
 
-.resume-p-span {
-  font-weight: bold;
-  font-size: 18px;
+.resume h4 {
+  font-weight: lighter;
+  font-size: 22px;
   text-align: center;
-  padding: 5px;
+  margin: 1em 0;
 }
 
-.resume-p {
+.pdf-p {
   text-align: center;
-  margin-bottom: 5px;
+  width: 100%;
 }
 
+.education-div {
+  margin: 5px;
+  width: 100%;
+}
+
+.education-p {
+  text-align: center;
+  letter-spacing: .25px;
+  width: 100%;
+  font-size: 15px;
+}
+
+.pdf-wrapper {
+  width: 100%;
+  margin-top: 1em;
+}
+
+/* this is the icon */
 .resume-pdf {
   font-size: 7em;
   font-weight: lighter;
@@ -390,9 +433,30 @@ footer a:hover {
 
   .resume-details {
     flex-direction: column;
-}
+  }
 
-  .resume-p {
+  .project-tile-wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .project-text {
+    max-width: 50%;
+  }
+
+  .project-tiles figcaption {
+    opacity: 1;
+    background: none;
+  }
+
+  .project-tiles figcaption i {
+    background: linear-gradient(180deg, #ffb8eabb, #ff00b38a);
+    background-clip: content-box;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .education-div {
     margin-top: 1em;
   }
 
@@ -425,19 +489,17 @@ footer a:hover {
     margin-bottom: 1em;
   }
 
-  .project-tile-wrapper {
-    flex-direction: column;
-  }
-
   .pdf-p {
     margin-top: 1em;
   }
 
   .project-tiles figcaption {
     opacity: 1;
-    background-color: rgba(0, 0, 0, 0.25);
-    color: rgb(255, 255, 255, 0.80);
     font-size: 4rem;
+  }
+
+  .project-text {
+    max-width: 50%;
   }
 
 }
@@ -490,7 +552,14 @@ footer a:hover {
     align-items: center;
   }
 
-  .contact-number {
+  .project-tile-wrapper {
+    display: flex;
+    margin-bottom: 3em;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .contact-div {
     margin: 2em;
   }
 
@@ -501,6 +570,12 @@ footer a:hover {
   .form div {
     font-size: 1.25em;
   }
+
+  .project-tiles figcaption {
+    opacity: 1;
+    font-size: 4rem;
+  }
+
 }
 
 @media screen and (max-width: 400px) {
@@ -531,7 +606,7 @@ footer a:hover {
     height: 250px;
   }
 
-  .contact-number {
+  .contact-div {
     margin: 1em;
   }
 
@@ -548,8 +623,13 @@ footer a:hover {
     width: 100%;
   }
 
-  .resume-p {
-    font-size: 25px;
+  .project-tiles figcaption {
+    opacity: 1;
+    font-size: 4rem;
+  }
+
+  .project-text {
+    max-width: 100%;
   }
 
 }
