--- a/src/index.css
+++ b/src/index.css
@@ -158,7 +158,7 @@ footer ul li a span:hover {
 .about,
 .projects,
 .contacts,
-.resume {
+.credentials {
   display: flex;
   justify-content: center;
   width: 60vw;
@@ -166,14 +166,14 @@ footer ul li a span:hover {
 }
 
 .contacts,
-.resume {
+.credentials {
   margin: 2em;
 }
 
 .about-wrapper,
 .projects-wrapper,
 .contact-wrapper,
-.resume-wrapper {
+.credentials-wrapper {
   background-color: #000000;
   width: 100%;
   display: flex;
@@ -184,7 +184,7 @@ footer ul li a span:hover {
 .about-wrapper h2,
 .projects-wrapper h2,
 .contact-wrapper h2,
-.resume-wrapper h2 {
+.credentials-wrapper h2 {
   writing-mode: vertical-lr;
   transform: rotate(180deg);
   flex-direction: row-reverse;
@@ -334,6 +334,26 @@ i.social-i {
   font-size: 30px;
 }
 
+/* education component */
+
+.certificate-wrapper {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.certificate-wrapper a {
+  margin-top: 1em;
+  width: 65%;
+}
+
+.certificate {
+  width: 100%;
+}
+
+/* resume component */
+
 .resume-details {
   margin: 1em;
   display: flex;
@@ -346,6 +366,8 @@ i.social-i {
   letter-spacing: 0.18rem;
   margin: 5px 0;
 }
+
+/* skills component */
 
 .skills-wrapper {
   width: 100%;
@@ -376,7 +398,7 @@ i.social-i {
   align-items: center;
 }
 
-.resume h4 {
+.credentials h4 {
   font-weight: lighter;
   font-size: 22px;
   text-align: center;
@@ -419,7 +441,7 @@ i.social-i {
 
 @media screen and (max-width: 980px) {
 
-  .about, .projects, .contacts, .resume {
+  .about, .projects, .contacts, .credentials {
     width: 80vw;
   }
 
@@ -522,14 +544,14 @@ i.social-i {
     width: 45%;
 }
 
-  .about, .projects, .contacts, .resume {
+  .about, .projects, .contacts, .credentials {
   flex-direction: column;
   width: 80%;
   margin-left: 1em;
   align-items: center;
   }
 
-  .about-wrapper h2, .projects-wrapper h2, .contact-wrapper h2, .resume-wrapper h2 {
+  .about-wrapper h2, .projects-wrapper h2, .contact-wrapper h2, .credentials-wrapper h2 {
     writing-mode: initial;
     transform: initial;
     margin: 15px;
@@ -610,7 +632,7 @@ i.social-i {
     margin: 1em;
   }
 
-  .resume {
+  .credentials {
     margin: 0;
   }
 
