--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,8 @@
 }
 
 body {
-  background-color: #000000;
-  color: white;
-  font-family: 'Times New Roman', Times, serif;
-  /* width: 80vh; */
+  background-color: #fff;
+  color: #000;
 }
 
 #root {
@@ -22,14 +20,14 @@ body {
 }
 
 .section-title { /* this goes on all h2 section titles */
-  font-family: 'UnifrakturMaguntia', 'Times New Roman', Times, serif;
-  font-weight: lighter;
+  /* font-family: 'UnifrakturMaguntia', 'Times New Roman', Times, serif;
+  font-weight: lighter; */
 }
 
 .btn {
   padding: 10px 15px;
   margin: 5px;
-  background-color: #fff;
+  background-color: #red;
   text-decoration: none;
   font-size: 16px;
   border: none;
@@ -126,33 +124,6 @@ footer ul li a span {
 footer ul li a span:hover {
   color: #fff;
 }
-
-/* cover  styling */
-.cover-empty {
-  width: 100%;
-  height: 500px;
-}
-
-.cover {
-  background-image: url('./assets/images/catblackandwhite.gif');
-  background-size: auto;
-  background-repeat: no-repeat;
-  background-position: center;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  width: 100%;
-  height: 550px;
-  position: fixed;
-  z-index: 0;
-  top: 0;
-  left: 0;
-}
-
-.cover h2 {
-  margin: 3em;
-}
-
 
 /* about, project, and constact form styling */
 .about,
@@ -437,6 +408,11 @@ i.social-i {
 
 .resume-pdf:hover {
   color: #ff00b3;
+}
+
+/* HERE ARE ALL THE TEMP PAGE STYLING, SHOULD BE DELETED ONCE FINISHED */
+.temp-main {
+
 }
 
 @media screen and (max-width: 980px) {
