--- a/src/index.css
+++ b/src/index.css
@@ -1,54 +1,132 @@
 /* general styling */
 
+@font-face {
+  font-family: "hybrid-bold";
+  src:local("Hybrid_b.tff"), url("./font/Hybrid_b.ttf")
+  format("truetype")
+}
+
+@font-face {
+  font-family: "hybrid-outline";
+  src:local("hybrid_o.tff"), url("./font/hybrid_o.ttf")
+  format("truetype")
+}
+
+@font-face {
+  font-family: "open-sans";
+  src:local("OpenSans.ttf"), url("./font/OpenSans.ttf")
+  format("truetype")
+}
+
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-  }
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
 
 html {
-background-color: #fff;
-color: #000;
+  background-color: #fff;
+  color: #000;
+  font-family: "open-sans";
 }
 
 #root {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    min-width: 100%;
-    height: 100vh;
-  }
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  min-width: 100%;
+  height: 100vh;
 
+}
 
-  
+section {
+  margin-left: 10px;
+  width: 100%;
+}
 
 /* App.js */
 
 main {
-    margin: 2%;
-    padding: 3px;
-    border: 1px solid #000;
+  margin: 2%;
+  padding: 3px;
+  border: 1px solid #000;
+  display: flex;
+  flex-direction: column;
+}
+
+h1 {
+  font-family: "hybrid-outline";
+  font-weight: lighter;
+  font-size: 50px;
+  letter-spacing: 5px;
+  margin-left: 20px;
+  color: #fe00b0;
+}
+
+.esc {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border: 1px solid #000;
+  margin: 5px;
+
 }
 
 .title-bar {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    border: 1px solid #000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  border: 1px solid #000;
 }
 
 .browser-window {
-    display: flex;
-    /* justify-content: center; */
-    align-items: center;
-    padding: 25px;
-    flex-direction: row;
+  display: flex;
+  flex: 0 1;
+  flex-direction: row;
+  padding: 25px;
+  width: 60vw;
+  height: 50vh;
 }
 
 /* Nav component  */
 
-header {
-    
+header h2 {
+  font-family: "hybrid-bold";
+  margin-left: 5px;
+  font-size: 35px;
 }
 
+header nav ul {
+  list-style: none;
+}
+
+header nav ul li {
+  padding: 5px;
+}
+
+header img {
+  margin-top: 5px;
+}
+
+/* Footer component  */
+
+footer {
+  display: flex;
+  justify-content: center;
+  padding: 5px;
+}
+
+footer ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+}
+
+footer ul li a {
+  text-decoration: none;
+  color: #000;
+}
